Parti hero avec css et js

--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -10,6 +10,7 @@
   --color-bg-main: #2A2725;        /* Charcoal Brown */
   --color-bg-secondary: #261F22;   /* Aubergine Shadow */
   --color-bg-dark: #25151B;        /* Dark Plum */
+  --color-bg-page: #131108;
 
   /* Accents */
   --color-accent-primary: #301010; /* Wine Brown */
