--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -21,15 +21,15 @@ body {
   margin: 0 auto;
 }
 
-/* Контейнер для обрезки */
+/* Conteiner*/
 .hero__media {
   position: relative;
   width: 100%;
-  height: 502px;              /* вот тут обрезка */
+  height: 502px;
   overflow: hidden;
 }
 
-/* Само фото */
+/* Photo */
 .hero__image {
   width: 100%;
   height: 100%;
@@ -38,7 +38,7 @@ body {
   display: block;
 }
 
-/* Градиент поверх фото */
+/* Gradient sur photo */
 .hero__gradient {
   position: absolute;
   inset: 0;
@@ -59,7 +59,7 @@ body {
   height: 73px;
 }
 
-/* Рамка */
+/* Frame */
 .hero__frame {
   width: 100%;
   height: 100%;
@@ -67,7 +67,7 @@ body {
   display: block;
 }
 
-/* Текст */
+/* Text */
 .hero__text {
   position: absolute;
   inset: 0;
@@ -244,8 +244,8 @@ body {
 
 /* Titre de nouveau section */
 .matilda__title {
-    /* расстояние ОТ плашки Матильды */
-  margin-bottom: 7px; /* расстояние ДО таймлайна */
+    /* Space */
+  margin-bottom: 7px;
   color: var(--color-gold-soft);
   font-family: var(--ff-text);
   font-size: var(--fs-lg);
@@ -270,7 +270,7 @@ body {
   
 }
 
-/* Пунктирная линия — АВТО */
+/* Ligne */
 .timeline__line {
   position: absolute;
   top: 120px; 
@@ -283,21 +283,21 @@ body {
 }
 
 
-/* Один блок */
+
 .timeline__item {
   text-align: center;
   margin-bottom: 56px;
   position: relative;
 }
 
-/* Обертка фото + кнопка */
+
 .timeline__media {
   position: relative;
   width: fit-content;
   margin: 0 auto;
 }
 
-/* Фото */
+
 .timeline__image {
   width: 167px;
   height: 167px;
@@ -306,7 +306,7 @@ body {
   display: block;
 }
 
-/* Кнопка expand */
+/* Bouton expand */
 .timeline__toggle {
   position: absolute;
   top: 50%;
@@ -325,7 +325,7 @@ body {
   transition: transform 0.3s ease;
 }
 
-/* Имя */
+/* Nom */
 .timeline__name {
   margin-top: 12px;
   margin-bottom: 6px;
@@ -335,7 +335,7 @@ body {
   font-weight: var(--fw-semibold);
 }
 
-/* Эпоха */
+/* Era */
 .timeline__era {
   margin: 0;
   color: var(--color-text-light);
@@ -345,7 +345,7 @@ body {
   line-height: 1.29;
 }
 
-/* Всплывающая плашка */
+/* Frame expand */
 .timeline__expand {
   position: absolute;
   top: calc(30% + 28px);
@@ -387,20 +387,20 @@ body {
 
 /* ---------- STARS SECTION ---------- */
 .stars-section {
-  margin-top: var(--spacing-md, 46px); /* можно подкорректировать */
+  margin-top: var(--spacing-md, 46px);
   text-align: center;
 }
 
-/* Ряд звезд */
+/* Etoiles*/
 .stars-row {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: var(--spacing-sm, 18px); /* расстояние между звездами */
-  margin-bottom: var(--spacing-md, 21.79px); /* отступ до кнопки */
+  gap: var(--spacing-sm, 18px);
+  margin-bottom: var(--spacing-md, 21.79px);
 }
 
-/* Размеры звезд */
+/* Taille des étoiles */
 .star {
   display: block;
 }
@@ -413,13 +413,13 @@ body {
   height: 6.8px;
 }
 
-/* Кнопка */
+/* Bouton */
 .stars-btn {
   position: relative;
   display: inline-block;
-  width: 60%;               /* адаптивно */
-  max-width: 232px;         /* макет */
-  aspect-ratio: 232 / 63;   /* сохраняем пропорции */
+  width: 60%;
+  max-width: 232px;
+  aspect-ratio: 232 / 63;
   background: none;
   border: none;
   padding: 0;
