--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,5 +18,8 @@
 /* Pages */
 @import "/src/css/pages/home.css";
 @import "/src/css/pages/about.css";
-@import "/src/css/pages/films-videos.css";
 @import "/src/css/pages/articles.css";
+@import "/src/css/pages/articles1-5.css";
+@import "/src/css/pages/contact.css";
+@import "/src/css/pages/films-videos.css";
+@import "/src/css/pages/radioactive.css";
