add page other page + correction

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,7 @@
 @import "/src/css/pages/about.css";
 @import "/src/css/pages/articles.css";
 @import "/src/css/pages/articles1-5.css";
-@import "/src/css/pages/contact.css";
 @import "/src/css/pages/films-videos.css";
 @import "/src/css/pages/radioactive.css";
+@import "/src/css/pages/other-projects.css";
+@import "/src/css/pages/contact.css";
