--- a/src/css/pages/articles.css
+++ b/src/css/pages/articles.css
@@ -3,7 +3,7 @@
 .articles-page {
   display: flex;
   flex-direction: column;
-  align-items: center; /* выравнивание карточек по центру */
+  align-items: center;
 }
 
 /* ======= Article card ======= */
