Add page sofia-covalevskaia - html + css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,7 @@
 /* Pages */
 @import "/src/css/pages/home.css";
 @import "/src/css/pages/about.css";
+@import "/src/css/pages/sofia-page.css";
 @import "/src/css/pages/articles.css";
 @import "/src/css/pages/articles1-5.css";
 @import "/src/css/pages/films-videos.css";
